Fixes up layout issues in pdp-form

--- a/src/styles/sections/pdp-form.scss
+++ b/src/styles/sections/pdp-form.scss
@@ -8,7 +8,6 @@
   color: $gray;
 }
 #add-to-cart{
-  max-width: 320px;
   height: 40px;
   position: relative;
   background-color: $brand-blue;
@@ -18,6 +17,7 @@
   border-radius: 2px;
 
   @media (min-width: $screen-xs){
+    max-width: 320px;
     height: 50px;
   }
 
@@ -66,7 +66,7 @@
     display: block;
     width: 1px;
     position: absolute;
-    height: 30px;
+    height: 20px;
     top: 10px;
     left: 0px;
     background-color: white;
@@ -161,17 +161,4 @@
   text-align: center;
   color: #ccc;
   margin: auto;
-}
-
-#price-wrapper{
-  .discount-label{
-    font-size: 14px;
-    margin-left: 10px;
-    color: $brand-red;
-  }
-
-  [data-compare-price]{
-    font-size: 14px;
-    margin-right: 10px!important;
-  }
 }
